--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "fausto-memories",
   "type": "module",
   "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
+"scripts": {
+  "dev": "astro dev",
+  "start": "astro dev",
+  "build": "astro build",
+  "preview": "astro preview",
+  "astro": "astro",
+  "deploy": "astro build && gh-pages -d dist"
+},
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.13"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.7"
   }
 }
